RESOLVED FIXED 265465
REGRESSION(267236@main): SVG may incorrectly be clipped when an SVGFilter is applied to its root
https://bugs.webkit.org/show_bug.cgi?id=265465
Summary REGRESSION(267236@main): SVG may incorrectly be clipped when an SVGFilter is ...
Bastian Kröger
Reported 2023-11-28 10:23:49 PST
Created attachment 468786 [details] Left wrong, right correct. browse: https://editor.printess.com/printess-editor/buyer-test.html?name=engraving-one-image&version=draft&token=eyJhbGciOiJSUzI1NiIsImtpZCI6InByaW50ZXNzLXNhYXMtYWxwaGEiLCJ0eXAiOiJKV1QifQ.eyJzdWIiOiJneTh6NDRFbUxpWjB2clVLclhsV3RpWlkxNUQyIiwianRpIjoibnl4NGJFZlZ5SVVvM1NkR2dYVnEtempzS3hlb0FYZUYiLCJyb2xlIjoic2hvcCIsIm5iZiI6MTYxODg2ODUxMSwiZXhwIjoxOTM0MjI4NTExLCJpYXQiOjE2MTg4Njg1MTEsImlzcyI6IlByaW50ZXNzIEdtYkggJiBDby5LRyIsImF1ZCI6InByaW50ZXNzLXNhYXMifQ.CuI6zdCzBm2y3t2GBD4pYdyztFzSeSEfdGIDBeiZIYvzQckB9oEB1Z4hDkBCGZGBtTMRyuHCbkwZgO6uxD-ZyahifiqrIqfqSqtFEGwgZUF87TvV_KlrYWBzDNTaUIQjr-yUoxLkdnEMzh-3D5qV8UKWIDfqwnYd0KhJiB2K9CSg82_etnz5Lk-altMDAT8b1AnzxcjRAJ9_b6-CAJFXG6AAnfdl7c_PS3sD-RPOkJ75Ta2glfikIiGZzfh09bn5Ptk7rucRdxUsLCLR6m5nUFpZbV77d2eqRw8pT4Kl-5by5gvMr1wUBGbEx751CNXtcCO3qk4uNnptfZ3yCpK0Z2FOo2CYLZBzmDiYCrdFV5U-_SZuVOEl8vk0uR3tj_PQci_R7MlQOjpB4NjlKckQ2zGvBSKNeupuiC71UZ2AT5BFlbqMsuYu0necIztyKiWsBmbniVlLe-v7_paP1N4nS2haD2n4s4N_CenJqijtPggWsITfoLm2twCOe7yNB5IH7bcEFv1-MbANuaFmJVLOcTfc89Zi-mkidaHV-n_9qXypzyB-ih_27YBNluRGwcHgTEkbJecSssMfvHSt1MUuqX-8gbl7bhFGryqHA2gMoSZNDW0LkSYig2K3poOUumD67vtYdNSPLhOmDK4ck9wLAKLOvk6dtywg2qfV-58_VbI See that only a grey part is rendered when using the svg filter. In an old version the whole rectangle (if you click on it) was grey. (You can also upload an image to see that only part of it is rendered) When zooming in (via the slider on the right hand side), more of the image gets visible. Tested on 17.1 (macOS and iOS), macOS 17.2 beta 3 When removing the filter, the whole image is rendered (without filter obviously). Worked in 16.6 (macOS and iOS). Tried everything I can imagine... But nothing works.
Attachments
Left wrong, right correct. (281.68 KB, image/png)
2023-11-28 10:23 PST, Bastian Kröger
no flags
Radar WebKit Bug Importer
Comment 2 2023-11-29 09:58:00 PST
Said Abou-Hallawa
Comment 3 2023-11-29 12:22:31 PST
This is a regression of 267236@main
Bastian Kröger
Comment 4 2023-11-30 02:26:11 PST
I tested on Version 17.2 (19617.1.16.11.2) and this does not fix the bug reported. From the changelog the regression bug linked should be fixed in there. But it does not fix this issue here. What am I missing here? :) Kind regards, Bastian
Said Abou-Hallawa
Comment 5 2024-03-05 16:49:11 PST
Said Abou-Hallawa
Comment 6 2024-03-12 18:12:32 PDT
*** Bug 270567 has been marked as a duplicate of this bug. ***
EWS
Comment 7 2024-04-10 14:39:30 PDT
Committed 277325@main (cb5290644a69): <https://commits.webkit.org/277325@main> Reviewed commits have been landed. Closing PR #25512 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.