Cherry-pick 277325@main (cb5290644a69). https://bugs.webkit.org/show_bug.cgi?id=265465

REGRESSION(267236@main): SVG may incorrectly be clipped when an SVGFilter is applied to its root
    https://bugs.webkit.org/show_bug.cgi?id=265465
    rdar://118938065

    Reviewed by Nikolas Zimmermann.

    Ensure the SVGFilter is applied only once to the RenderSVGRoot through the SVG
    rendering code.

    But use the RenderLayerFilters to repaint the referenced SVGFilter clients when
    its effects are changed.

    * LayoutTests/svg/filters/filter-on-root-tile-boundary-expected.html: Added.
    * LayoutTests/svg/filters/filter-on-root-tile-boundary.html: Added.
    * Source/WebCore/platform/graphics/filters/FilterOperations.cpp:
    (WebCore::FilterOperations::isReferenceFilter const):
    * Source/WebCore/platform/graphics/filters/FilterOperations.h:
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::paintsWithFilters const):
    (WebCore::RenderLayer::calculateClipRects const):
    * Source/WebCore/rendering/svg/SVGRenderingContext.cpp:
    (WebCore::SVGRenderingContext::prepareToRenderSVGContent):

    Canonical link: https://commits.webkit.org/277325@main

Canonical link: https://commits.webkit.org/274313.158@webkitglib/2.44